<resources>
    <string name="app_name">MovieNet</string>
    <string name="app_title">MovieNet</string>
    <string name="content_description_favorite">favorite icon</string>
    <string name="favorite">favorite</string>
    <string name="content_description_search">search icon</string>
    <string name="search">search</string>
    <string name="content_description_more">more icon</string>
    <string name="more">more</string>
    <string name="floatingActionButton">Floating action button</string>
    <string name="card_title">The Matrix</string>
    <string name="matrix_image">Matrix Image</string>
    <string name="description">The Matrix Movie. Produced in the year 1998 and released in 8th July, 2000.</string>
    <string name="download_now">Download Now</string>
    <string name="size_1gb">size: 1GB</string>
    <string name="share_icon">Share icon</string>
    <string name="explore_icon">explore</string>
    <string name="premier_icon">Premier</string>
    <string name="live_icon">Live</string>
    <string name="watched_icon">Watched</string>
    <string name="popular_icon">Popular</string>
    <string name="new_icon">New</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="deleted">Deleted</string>
    <string name="archive">Archive</string>
    <string name="trending">Trending</string>
    <string name="downloaded">Downloaded</string>
</resources>