<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group
    android:id="@+id/group1"
    android:checkableBehavior="single"
    >
    <item
        android:id="@+id/downloaded"
        android:title="@string/downloaded"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        />

    <item
        android:id="@+id/trending"
        android:title="@string/trending"
        android:icon="@drawable/ic_baseline_trending_up_24"
        />

    <item
        android:id="@+id/archive"
        android:title="@string/archive"
        android:icon="@drawable/ic_baseline_archive_24"
        />

    <item
        android:id="@+id/deleted"
        android:title="@string/deleted"
        android:icon="@drawable/ic_baseline_delete_24"
        />

    <item
        android:id="@+id/recentlyViewed"
        android:title="@string/recently_viewed"
        android:icon="@drawable/ic_baseline_remove_red_eye_24"
        />

</group>
</menu>